finish porting forge version to 1.19